# asunder

./: .dependabot.yaml  .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
config/: .bumpversion.cfg  .isort.cfg  coverage.ini  flake8.ini  flake8_all.ini  interrogate.toml  mkdocs.yml  mypy.ini  poetry.toml  pytest.ini
docs/: nav.md
make_cmds/: build.mk  clean.mk  documentation.mk  poetry.mk  quality.mk  tests.mk
scripts/: colors.py  gen-pages.py
src/asunder/: __init__.py  __main__.py  _version.py
src/asunder/analysis/: analyze_content.py  risk_assement.py
src/asunder/command/: __init__.py  analyze.py  cli.py  extract.py  rename.py  rename_cmd.py  report.py
src/asunder/metrics/: base_metric.py  functional_metrics.py  process_metrics.py  structure_metrics.py
src/asunder/project/: __init__.py  project.py
src/asunder/report/: report.py
src/asunder/repository/: extract.py  period.py
src/asunder/rope/: __init__.py  project.py  rename_module.py
src/asunder/rope_sdk/: __init__.py
src/asunder/rope_sdk/find/: __init__.py  find.py
src/asunder/rope_sdk/refactor/move/: move.py
src/asunder/rope_sdk/refactor/rename/: rename.py
src/asunder/utils/: checks.py  data.py  logging.py
test_data/test_package/module1/: subMOM.py  submodule1.py
test_data/test_package/module2/: submodule2.py
tests/: conftest.py  test_import.py
tests/test_app/: test_analyze.py  test_app.py  test_extract.py  test_rename.py  test_report.py
tests/test_unit/: test_rename.py
