[tool.poetry]
name = "asunder"
version = "0.1.0"
description = "CLI for refactoring python projects"
authors = ["Leandro G. Almeida <leandro.g.almeida@gmail.com>"]
readme = "README.md"
packages = [{include = "asunder", from = "src"}]

[tool.poetry.scripts]
asunder = 'asunder:app'


[[tool.poetry.source]]
name = "mkdocs-material-insiders"
url = "https://github.com/squidfunk/mkdocs-material-insiders.git"
default = false
secondary = false

[tool.poetry.dependencies]
python = "^3.10"
rope = "^1.4.0"
typer = "^0.7.0"
rich = "^12.6.0"
radon = "^5.1.0"
gitpython = "^3.1.29"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^5.0.4"
pytest = "^7.2.0"
isort = "^5.10.1"
autoflake = "^1.7.7"
coverage = "^6.5.0"
towncrier = "^22.8.0"
bump2version = "^1.0.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-macros-plugin = "^0.7.0"
mkdocs-coverage = "^0.2.6"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.4"
mkdocs-literate-nav = "^0.5.0"
mkdocs-gitlab-plugin = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79