[tool.poetry]
name = "asunder"
version = "0.1.0"
description = "CLI for refactoring python projects"
authors = ["Leandro G. Almeida <leandro.g.almeida@gmail.com>"]
readme = "README.md"
packages = [{include = "asunder", from = "src"}]

[tool.poetry.scripts]
asunder = 'asunder:app'


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
rich = "^13.9.2"
pydriller = "^2.6"
radon = "^6.0.1"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11.2"
pytest = "^8.3.3"
coverage = "^7.6.2"
towncrier = "^24.8.0"
bump2version = "^1.0.1"
pytest-cov = "^5.0.0"
interrogate = "^1.7.0"

anybadge = "^1.14.0"



[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
